use elementNROWS() instead of defunct elementLengths()
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/SomaticCancerAlterations@3945 db2202da-8704-0410-b924-b125b3cd84ef

--- a/vignettes/SomaticCancerAlterations-html.Rhtml
+++ b/vignettes/SomaticCancerAlterations-html.Rhtml
@@ -339,7 +339,7 @@ object with <code>merge = TRUE</code>.
 <!--begin.rcode multiple_studies
 three_studies = scaLoadDatasets(all_datasets[1:3])
 
-print(elementLengths(three_studies))
+print(elementNROWS(three_studies))
 
 class(three_studies)
 end.rcode-->
